fixed spacing for 1st review on bob123

--- a/style.css
+++ b/style.css
@@ -361,7 +361,20 @@ body {
     width: 70%;
 
     color: black;
+}
 
+.pro-review-location {
+    font-size: 1rem;
+    opacity: 0.6;
+}
+
+.pro-review-location a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.pro-review-title {
+    font-size: 1.5rem;
 }
 
 .pro-actions {
@@ -431,6 +444,7 @@ li.pro-review-box{
 
 .pro-review-text{
     padding-top: .5vh;
+    padding-left: 68px;
     font-size: 2vh;
 }   
 
@@ -470,10 +484,18 @@ li.pro-or-box{
 }
 
 .pro-or-header{
-    margin-left: 10%;
     font-size: 2.5vh;
-    width: 50%;
-    height: 25%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.pro-crown-i {
+    background-position: -0px -75px;
+    background-size: 100px;
+    width: 25px;
+    height: 25px;
+    transform: scaleY(0.8);
 }
 
 .pro-or-text{
